Modal window is working correctly. I just synced the components props to some properties in the main instance. Couldn't figure out how to do it using events yet. Now I'm trying to get Bootstrap navbar-collapse to work. I've included bootstrap.min.js in the page and it still doesn't seem to work and all of the code seems to be good.

--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,12 @@
 }
 
 .modal-container {
-    width: 80%;
-    margin: 0px auto;
+    width: 85%;
+    max-width: 1200px;
+    margin: 20px auto;
     padding: 20px 30px;
     background-color: #fff;
-    border-radius: 2px;
+    border-radius: 5px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, .33);
     transition: all .3s ease;
     font-family: Helvetica, Arial, sans-serif;
@@ -31,19 +32,30 @@
 .modal-header h3 {
     margin-top: 0;
     color: #42b983;
+    float: left;
 }
 
 .modal-image {
-    hieght: 95%;
-    width: 95%;
+    margin: 10px auto;
+    hieght: 100%;
+    width: 100%;
 }
 
 .modal-description {
     margin: 20px 0;
+    text-align: center;
 }
 
-.modal-close, .modal-etsy-button {
+.modal-close {
     float: right;
+}
+
+.modal-etsy-button {
+    float: right;
+}
+
+.modal-etsy-alert {
+    float: left;
 }
 
 /*
